tests/error/import_errors/alias_different.err
Guppy compilation failed. Error in file $FILE:12

10:    @guppy(module)
11:    def foo(x: MyType) -> "MyType2":
12:        return x
                  ^
GuppyTypeError: Expected return value of type `MyType`, got `MyType`
